{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 160,
  "lineage": "48b6e899-b4c5-77ec-15f1-1907999084f3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "windows_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0e0d6e610ffe146fe",
            "arn": "arn:aws:ec2:eu-north-1:120569618740:instance/i-0c06e0f3adb929356",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0c06e0f3adb929356",
            "instance_id": "i-0c06e0f3adb929356",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "key_name": "first",
            "launch_time": "2025-02-19T15:49:15Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0907237af8aa4dfaa",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-0-68.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.68",
            "public_ip": "16.16.79.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0758349c26b947386",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0e4f07169e0fdf9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00b2ed06b2691d032"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b67339447306758",
            "arn": "arn:aws:ec2:eu-north-1:120569618740:elastic-ip/eipalloc-00b67339447306758",
            "association_id": "eipassoc-00c409253c7f0bc14",
            "domain": "vpc",
            "id": "eipalloc-00b67339447306758",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0563e3e90327e7b46",
            "private_dns": "ip-10-0-0-175.eu-north-1.compute.internal",
            "private_ip": "10.0.0.175",
            "public_dns": "ec2-51-20-159-47.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.159.47",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e0d6e610ffe146fe",
            "arn": "arn:aws:ec2:eu-north-1:120569618740:instance/i-0c06e0f3adb929356",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c06e0f3adb929356",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "first",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0907237af8aa4dfaa",
            "private_dns": "ip-10-0-0-68.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.68",
            "public_ip": "16.16.79.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0758349c26b947386",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0e4f07169e0fdf9",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b2ed06b2691d032"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.public",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:120569618740:internet-gateway/igw-0ae4c797656a1d037",
            "id": "igw-0ae4c797656a1d037",
            "owner_id": "120569618740",
            "vpc_id": "vpc-06074c08699d9d46f"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b67339447306758",
            "association_id": "eipassoc-00c409253c7f0bc14",
            "connectivity_type": "public",
            "id": "nat-0f95a50fb1e3cd358",
            "network_interface_id": "eni-0563e3e90327e7b46",
            "private_ip": "10.0.0.175",
            "public_ip": "51.20.159.47",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f0e4f07169e0fdf9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:120569618740:route-table/rtb-0373290b183b1ceea",
            "id": "rtb-0373290b183b1ceea",
            "owner_id": "120569618740",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae4c797656a1d037",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06074c08699d9d46f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dffcaeee792dd062",
            "route_table_id": "rtb-0373290b183b1ceea",
            "subnet_id": "subnet-0f0e4f07169e0fdf9"
          },
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.test",
            "aws_subnet.public",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:120569618740:security-group/sg-00b2ed06b2691d032",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00b2ed06b2691d032",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5985,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5985
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tls from vpc",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tls from vpc",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "120569618740",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "test_sg"
            },
            "tags_all": {
              "name": "test_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06074c08699d9d46f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:120569618740:subnet/subnet-0c7349cf17fc9714f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7349cf17fc9714f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120569618740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private_subnet"
            },
            "tags_all": {
              "name": "private_subnet"
            },
            "vpc_id": "vpc-06074c08699d9d46f"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:120569618740:subnet/subnet-0f0e4f07169e0fdf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0e4f07169e0fdf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120569618740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnet"
            },
            "tags_all": {
              "name": "public_subnet"
            },
            "vpc_id": "vpc-06074c08699d9d46f"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:120569618740:vpc/vpc-06074c08699d9d46f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f506c5ff159c578",
            "default_route_table_id": "rtb-03a2917c3096de577",
            "default_security_group_id": "sg-0b7463c4120a5a4f6",
            "dhcp_options_id": "dopt-0da6b3bc9c45e4297",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06074c08699d9d46f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a2917c3096de577",
            "owner_id": "120569618740",
            "tags": {
              "name": "test server}"
            },
            "tags_all": {
              "name": "test server}"
            }
          }
        }
      ]
    }
  ]
}